syntax = "proto3";
package notebook.v2;
option go_package = "notebook/v2";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Notebook {
  rpc GetEntry(GetEntryRequest) returns (Entry) {
    option (google.api.http) = {
      get: "/v2/entries/{id}"
    };
  }
  rpc CreateEntry(CreateEntryRequest) returns (Entry) {
    option (google.api.http) = {
      post: "/v2/entries"
      body: "entry"
    };
  }
}

message GetEntryRequest {
  string id = 1;
}

message Entry {
  // Output only.
  string id = 1;
  string text = 2;
  string creator_id = 3;
  // Output only.
  google.protobuf.Timestamp created_at = 4;
  // Output only.
  google.protobuf.Timestamp updated_at = 5;
}

message CreateEntryRequest {
  Entry entry = 2;
}

message Principal {
  enum Type {
    USER = 0;
  }

  Type type = 1;
  string id = 2;
}